--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -4,10 +4,6 @@
   padding: 0;
   column-gap: 30px;
 }
-/* .lead__button:first-child {
-  margin-right: 40px;
-}  */
-
 .lead__wrapper {
   margin: 0 180px;
   background: #2E2E31;
@@ -58,7 +54,6 @@
   font-size: 36px;
   line-height: 43px;
   font-weight: 600;
-  /* margin: 0 0 40px 0; */
 }
 
 .lead__images {
@@ -87,8 +82,6 @@
   color: #00A9DE;
 }
 
-
-
 @media screen and  (max-width: 1440px) {
   .lead__wrapper {
     margin: 0 150px;
@@ -108,35 +101,6 @@
     font-weight: 300;
     margin:0 0 20px 0;
     
-  }
-}
-@media screen and  (max-width: 1440px){
-  .lead__wrapper {
-    margin: 0 100px;
-  }
-  .lead__title {
-    font-size: 65px;
-    line-height: 82px;
-    font-weight: 300;
-  }
-  .lead__subtitle {
-    font-size: 32px;
-    line-height: 37px;
-    font-weight: 200;
-    margin:0 0 70px 0;
-  }
-  .lead__slogan {
-    font-size: 32px;
-    line-height: 37px;
-    font-weight: 600;
-    margin: 0 0 20px 0;
-  }
-  .lead__button {
-    font-size: 22px;
-    line-height: 27px;
-    font-weight: 400;
-    padding: 20px 18px;
-    border-radius: 20px;
   }
 }
 @media screen and  (max-width: 1200px){
@@ -164,10 +128,6 @@
   .lead__button:first-child {
     margin-right: 20px;
   } 
-  /* .lead__image {
-    width: 150px;
-    height: 320px;
-  } */
 }
 @media screen and  (max-width: 992px){
   .lead__wrapper {
@@ -237,7 +197,6 @@ line-height: 22px;
     flex-direction: column;
     justify-content: center;
     margin-top: 20px;
-    
   }
 .lead__content {
     flex-direction: column;
@@ -280,6 +239,12 @@ line-height: 22px;
   }
 }
 @media screen and  (max-width: 375px){
+  .lead__title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 26px;
+    margin: 0 0 20px 0;
+}
   .lead__slogan {
     font-size: 22px;
     line-height: 26px;
@@ -292,12 +257,28 @@ line-height: 22px;
     font-size: 16px;
     line-height: 26px;
     font-weight: 300;
+  }
+  .lead__image {
+    width: 133px;
+    height: 300px;
+  }
+  .description__heading__content {
+    margin-top: 50px;
 }
-.lead__images {
+  .lead-text {
+    margin-top: 0px;
+}
+  .lead__images {
     position: absolute;
     top: 300px;
-    left: 40px;
+    left: 35px;
     object-fit: contain;
     width: 200px;
   }
+  .lead__download-links-list {
+    flex-direction: column-reverse;
+    row-gap: 10px;
+    margin-top: 350px;
+    align-items: center;
+}
 }
