--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -154,6 +154,19 @@
     margin: 234px 50px 110px 89px;
   }
 }
+@media screen and  (max-width: 1240px) {
+  .investment__wrapper,
+  .sfera__wrapper,
+  .venchur__wrapper {
+    margin: 0 80px;
+  }
+  .investment-body {
+    column-gap: 80px;
+  }
+  .card {
+    column-gap: 0px;
+}
+}
 @media screen and  (max-width: 768px) {
   .button_type_ios-invest {
 		padding-left:118px;
@@ -232,5 +245,93 @@
   }
   .venchur__downtext {
     margin: 48px 0 50px 0;
+  }
+}
+@media screen and  (max-width: 375px) {
+  .investment__wrapper, 
+  .sfera__wrapper, 
+  .venchur__wrapper,
+  .card__wrapper {
+    margin: 0 16px;
+  }
+  .investment-body {
+    row-gap: 0;
+    padding: 100px 0 10px 0;
+}
+  .lead__download-links-list {
+    flex-direction: column-reverse;
+    margin-top: 375px;
+    margin-left: 20px;
+  }
+  .button_type_ios-invest {
+    padding-left: 110px;
+  }
+  .investment-body__title {
+    width: 200px;
+    font-size: 22px;
+    line-height: 26px;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  .investment-body__text {
+    max-width: 237px;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  .investment__image {
+    width: 142px;
+    top: 400px;
+    right: 110px;
+  }
+  .card__image-center {
+    width: 308px;
+  }
+  .card-body__link, .card-body__text, 
+  .venchur__downtext {
+    margin: 40px 0 40px 0;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+    padding-left: 15px;
+  }
+  .card-body__list_2,
+  .card-body__list_4{
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px;
+  }
+  .sfera-body__uptext, 
+  .venchur-body__title,
+  .venchur__title  {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 26px;
+    margin: 0 0 0px 0;
+    width: 240px;
+  }
+  .venchur-body-list,
+  .sfera-body__link{
+    margin-bottom: 20px;
+  }
+  .venchur__title {
+    width: 270px;
+  }
+  .venchur-body__undertitle {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 20px;
+  }
+  .venchur-body-list, .venchur-list, .sfera-body__downtext, .sfera-body__link { 
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+  }
+  #btn {
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 600;
   }
 }
