--- a/assets/css/startups.css
+++ b/assets/css/startups.css
@@ -5,7 +5,7 @@
   column-gap: 30px;
 }
 .startups__wrapper {
-  margin: 0 250px;
+  margin: 0 256px;
 }
 .section__startups {
   background: #2E2E31;
@@ -102,6 +102,16 @@
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 1600px) {
+  .lead {
+    column-gap: 10px;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .startups__wrapper {
+    margin: 0 100px;
+  }
+}
 @media screen and (max-width: 768px) {
   .startups__wrapper {
     margin: 0 50px;
@@ -174,4 +184,61 @@
     font-weight: 400;
     line-height: 22px;
   } 
+}
+@media screen and (max-width: 375px) {
+  .startups__wrapper {
+    margin: 0 14px 0;
+  }
+  .lead__image {
+    width: 350px;
+    height: 250px;
+  }
+  .lead__images {
+    position: absolute;
+    top: 430px;
+    left: 0;
+  }
+  .lead__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 300px;
+  }
+  .lead__download-links-list {
+  row-gap: 20px;
+  }
+  .lead__title {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 26px;
+  }
+  .description__wrapper {
+    margin: 50px 25px;
+  }
+  .description__list__heading {
+    margin: 0 0 40px 0;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 26px;
+  }
+  .description__list__paragraf {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    padding: 0px 0 20px 10px;
+  }
+  .description__list {
+    margin: 0 0 60px 45px;
+  }
+  .frame__list {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .frame__list__item {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: center;
+}
 }
