--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -48,7 +48,21 @@
 transform: scale(1);
 background: #1f1f26;
 }
-
+.close_menu{
+    display: none;
+}
+.logo_menu{
+    display: none;
+}
+.download_button-tablet{
+    display: none;
+}
+.link_tablet-menu{
+    display: none;
+}
+.header_menu-tablet{
+    display: none;
+}
 .nav_menu{
     display: flex;
     align-items: center;
@@ -160,6 +174,10 @@ background: #1f1f26;
         column-gap: 10px;
         margin-left: 40px;
     }
+
+    .logo_menu{
+        display: block;
+    }
     label.logo {
         padding-left: 25px;
     }
@@ -180,6 +198,62 @@ background: #1f1f26;
         left: 675px;
         top: 80px;
     }
+    .close_menu{
+        display: block;
+        color: black;
+
+    }
+    .header_menu-tablet{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 120px;
+        margin-top: 20px;
+
+    }
+    .logo__menu-item{
+        color: black;
+    }
+    .download_button-tablet{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+        margin-top: 25px;
+        margin-left: 38px;
+    }
+    .coloWhite{
+        background-color: white;
+        color: black;
+    }
+    .button_download{
+        width: 273px;
+        height: 42px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 32px;
+        gap: 10px;
+        filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
+        border-radius: 16px ;
+    }
+    .link_tablet-menu{
+        width: 100%;
+        height: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 15px;
+
+    }
+    .menu-links{
+        padding: 0 20px;
+        color: #007094;
+
+    }
     .nav_menu{
         width: 100%;
         height: 90px;
@@ -191,32 +265,38 @@ background: #1f1f26;
         z-index: 99999;
         margin: 0 auto;
         padding: 0 45px;
+        color: black;
     }
     .nav_list{
         display: flex;
         justify-content: flex-start;
-        align-items: center;
+        align-items: flex-start;
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 12px;
         position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 90px;
-        left: -110%;
-        text-align: center;
+        width: 400px;
+        top: 0;
+        height: 1024px;
+        right: -110%;
+        text-align: start;
         transition: all .7s;
         z-index: 99999;
-         backdrop-filter: brightness(40%) ;
+        background-color: white;
     }
+
     .nav_list-item{
+        width: 100%;
         height: 40px;
         display: block;
-        line-height: 30px;
-        margin-top: 50px;
+        line-height: 50px;
+        margin-top: 40px;
+        margin-left: 50px;
+
     }
+
     .nav_list-link{
         font-size: 20px;
-        color: white;
+        color: black;
     }
     .langs{
         margin-left: 90px;
@@ -224,11 +304,12 @@ background: #1f1f26;
 
     }
     .nav_list-link:hover,.nav_list-link.active{
-        color: white;
+        color: #007094;
     }
     .myCheckBox:checked ~ .nav_list{
-        left: 0;
+        right: 0;
     }
+    
 }
 @media screen and (max-width:375px){
     .header__wrapper {
