--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -392,7 +392,7 @@ a {
     line-height: 39px;
   }
   .section-about-as-heading {
-    margin-top: 100px;
+    margin-top: 0;
     font-size: 32px;
     line-height: 39px;
     font-weight: 700;
