--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -312,8 +312,27 @@ background: #1f1f26;
     
 }
 @media screen and (max-width:375px){
+    
     .header__wrapper {
         padding: 0 25px;
+    }
+    .nav_list {
+        width: 300px;
+        height: 812px;
+    }
+    .download_button-tablet {
+        row-gap: 20px;
+        margin-top: 25px;
+        margin-left: 13px;
+    }
+    .button_download {
+        width: 273px;
+        height: 42px;
+        padding: 16px 5px;
+
+    }
+    .menu-links {
+        width: 22px;
     }
     .block-logo {
         column-gap: 10px;
