--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -343,6 +343,31 @@ a {
     margin: 180px 130px 70px 130px;
     text-align: center;
 }
+@media screen and (max-width: 1240px) {
+  .section-image-one,
+  .section-image-two {
+    width: 230px;
+    height: 500px;
+}
+  .section-first {
+    column-gap: 5px;
+}
+  .section-image-one,
+  .section-two-image-one {
+    margin-right: 24px;
+}
+  .block-eight {
+    margin: 180px 80px 70px 80px;
+  }
+  .section-two {
+    column-gap: 70px;
+  }
+  .block-for-image-two {
+    margin-right: 8px;
+}
+.block-for {
+  column-gap: 30px;
+}
 @media screen and (max-width: 768px) {
   .lead__download-links-list {
     justify-content: center;
@@ -794,7 +819,6 @@ a {
   }
 }
 @media screen and (max-width: 320px) {
-  
   .section-as-iframe-video {
     width: 280px;
     height: 258px;
@@ -816,7 +840,6 @@ a {
   .section-two-image-two {
     width: 130px;
     height: 272px;
-
   }
   .block-for-image-one {
     width: 111px;
@@ -847,17 +870,8 @@ a {
   .about-as-heading-last{
     font-size: 20px;
     line-height: 30px;
-    
   }
   .section {
     margin-top: 40px;
   }
-}
-/* .off_scroll {
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  position: fixed;
-} */
 }
