--- a/assets/css/landing-card.css
+++ b/assets/css/landing-card.css
@@ -133,6 +133,9 @@
 	}
 }
 @media screen and (max-width: 375px) {
+	.product-back{
+		height: 260px;
+	}
 	.section-card {
     padding: 80px 32px;
 	}
@@ -143,7 +146,7 @@
     height: 78%;
 	}
 	.card-block-botton {
-    margin-top: 75px;
+    margin-top: 80px;
 		font-size: 14px;
 		line-height: 17px;
 		font-weight: 400;
@@ -162,8 +165,8 @@
 	}
 	.left-side {
 		width: 16px;
-    height: 283px;
-    margin-top: 296px;
+    height: 290px;
+    margin-top: 333px;
 	}
 	.card-block__link {
 		position: relative;
@@ -188,7 +191,7 @@
 	}
 	.card-block {
 		width: 140px;
-		height: 365px;
+		height: 260px;
 	}
 	.back {
 		width: 132px;
@@ -198,5 +201,10 @@
 		width: 132px;
 		height: 261px;
 	}
-	
+	.left-side{
+		height: 255px;
+	}
+	.card-block-botton{
+		margin-top: 95px;
+	}
 }
