--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -393,10 +393,21 @@ background: #1f1f26;
     .menu-links{
         padding: 0 13px;
     }
+    .checkButton{
+        left: 300px;
+    }
+    .block-logo {
+    column-gap: 10px;
+    margin-left: 20px;
+    }
 }
 @media  screen and (max-width: 320px){
     .checkButton{
-        left:590px
+        left: 260px;
+    }
+    .block-logo {
+    column-gap: 10px;
+    margin-left: 11px;
     }
     .nav_menu{
         column-gap: 40px;
