--- a/assets/css/apps.css
+++ b/assets/css/apps.css
@@ -311,7 +311,7 @@
     width: 320px;
   }
   .apps__subapps-list {
-    justify-items: flex-start;
+    justify-items: stretch;
   }
   .apps__subapps {
     padding: 70px 0 80px 0;
