--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -63,6 +63,9 @@ background: #1f1f26;
 .header_menu-tablet{
     display: none;
 }
+.lang_tablet{
+    display: none;
+}
 .nav_list-elements{
     width: 100%;
     height: 100%;
@@ -118,7 +121,7 @@ background: #1f1f26;
     list-style: none;
     text-decoration: none;
     margin: 0 auto;
-    padding: 10px;
+    padding: 0;
     color: rgba(255, 255, 255, 0.87);
 
 }
@@ -133,11 +136,11 @@ background: #1f1f26;
 }
 .nav_list-item.active{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 40
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 35
 }
 .nav_list-item:hover{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 40
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 35
 }
 .checkButton {
     font-size: 30px;
@@ -368,9 +371,8 @@ background: #1f1f26;
         padding: 0 0;
     }
     .nav_list{
-
         width: 312px;
-        height: 812px;
+        height: 667px;
 
     }
     .nav_list-item {
@@ -378,7 +380,7 @@ background: #1f1f26;
         height: 37px;
         display: block;
         line-height: 40px;
-        margin-top: 18px;
+        margin-top: 20px;
         margin-left: 9px;
 
     }
@@ -399,6 +401,32 @@ background: #1f1f26;
     .block-logo {
     column-gap: 10px;
     margin-left: 20px;
+    }
+    .lang_tablet{
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+        padding-right: 70px;
+        padding-top: 18px;
+    }
+    .list_lang-tablet{
+        display: flex;
+        flex-direction: column;
+    }
+    .lang_list-link{
+        color: black;
+        font-size: 18px;
+        font-weight: 500;
+        padding-left: 11px;
+        padding-top: 8px;
+    }
+    .lang_list-link:hover,.active{
+        border-bottom:2px solid rgba(0,0,0,0);
+        border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 35
+    }
+
+    .img_lang-tablet{
+        padding-top: 8px;
     }
 }
 @media  screen and (max-width: 320px){
