--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -57,6 +57,72 @@ details {
         font-size: 16px;
         line-height: 20px;
         font-weight: 500;
+    }.section__wrapper {
+        margin: 0 200px;
+    }
+    .apps__lead {
+        background:  #2E2E31;
+    }
+    .lead__flex {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 80px;
+        padding: 100px 0;
+    }
+    .lead__text {
+        color: rgba(255, 255, 255, 0.87);
+        font-size: 24px;
+        line-height: 29px;
+        max-width: 700px;
+    }
+    details {
+        color: rgba(255, 255, 255, 0.87);
+        padding-bottom: 10px;
+        max-width: 200px;
+        cursor: pointer;
+    }
+    @media screen and (max-width: 1440px) {
+        .section__wrapper {
+            margin: 0 70px;
+        }
+    }
+    @media screen and (max-width: 1240px) {
+        .section__wrapper {
+            margin: 0 30px;
+        }
+        .apps__lead-image {
+            max-width: 520px;
+        }
+    }
+    @media screen and (max-width: 768px) {
+        .lead__flex {
+        flex-direction: column;
+        padding: 100px 0 0 0;
+        }
+        .section__wrapper {
+            margin: 0 50px;
+        }
+    }
+    @media screen and (max-width: 375px) {
+        .section__wrapper {
+            margin: 0 25px;
+        }
+        .apps__lead-image {
+            max-width: 320px;
+        }
+        .lead__text {
+            color: rgba(255, 255, 255, 0.87);
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 500;
+        }
+    }
+    
+    @media screen and (max-width: 320px) {
+    .apps__lead-image {
+        max-width: 300px;
+    }
     }
 }
 
