--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -330,13 +330,13 @@ a {
   }
   .block-for-image-one {
     width: 280px;
-    height: 560px;
+    height: 590px;
     margin-right: 48px;
   }
   .block-for-image-two {
     width: 280px;
-    height: 561px;
-    margin-right: 48px;
+    height: 590px;
+    /* margin-right: 48px; */
   }
   .block-seven {
     column-gap: 200px;
@@ -847,12 +847,12 @@ a {
     height: 272px;
   }
   .block-for-image-one {
-    width: 111px;
-    height: 206px;
+    width: 106px;
+    height: 219px;
     margin: 14px 0 0 0x;
   }
   .block-for {
-    margin: 37px -15px 0 8px;
+    margin: 38px 5px 0 5px;
   }
   .block-for-list  {
     font-size: 12px;
