--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -436,12 +436,18 @@ background: #1f1f26;
     .img_lang-tablet{
         padding-top: 8px;
     }
+    .button__play-video {
+        background-size: 10px;
+        background-position: 12px center;
+    }
+    label.logo {
+        padding-left: 10px;
+    }
 }
 @media  screen and (max-width: 320px){
-    label.logo {
+    .logo {
         padding-left: 0px;
     }
-   
     .header_menu-tablet {
     column-gap: 40px;
     }
@@ -490,8 +496,5 @@ background: #1f1f26;
     .checkButton{
         margin-left: 10px;
     }
-    .button__play-video {
-        background-size: 10px;
-        background-position: 13px center;
-    }
+
 }
