--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -136,11 +136,11 @@ background: #1f1f26;
 }
 .nav_list-item.active{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 35
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 30
 }
 .nav_list-item:hover{
     border-bottom:2px solid rgba(0,0,0,0);
-    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 35
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 30
 }
 .checkButton {
     font-size: 30px;
@@ -443,9 +443,11 @@ background: #1f1f26;
     column-gap: 40px;
     }
     .button_download {
-        width: 153px;
+        width: 170px;
         height: 14px;
         font-size: 12px;
+        filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
+        border-radius: 16px ;
     }
     .download_button-tablet {
         
