--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -259,6 +259,7 @@ background: #1f1f26;
         gap: 10px;
         filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
         border-radius: 16px ;
+        color:black;
     }
     .link_tablet-menu{
         width: 100%;
@@ -296,7 +297,7 @@ background: #1f1f26;
         position: fixed;
         width: 400px;
         top: 0;
-        height: 1024px;
+        height: 580px;
         right: -110%;
         text-align: start;
         transition: all .7s;
@@ -304,7 +305,6 @@ background: #1f1f26;
         background-color: white;
         padding: 0;
         overflow-y: scroll;
-
     }
 
     .nav_list-item {
