--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -444,44 +444,53 @@ background: #1f1f26;
         padding-left: 10px;
     }
 }
-@media  screen and (max-width: 320px){
+@media  screen and (max-width: 320px) {
     .logo {
         padding-left: 0px;
     }
+
     .header_menu-tablet {
-    column-gap: 40px;
+        column-gap: 40px;
     }
+
     .button_download {
         width: 170px;
         height: 14px;
         font-size: 12px;
         filter: drop-shadow(0px -4px 4px rgba(255, 0, 245, 0.25)) drop-shadow(0px 4px 4px rgba(34, 218, 229, 0.25));
-        border-radius: 16px ;
+        border-radius: 16px;
     }
+
     .download_button-tablet {
-        
+
         justify-content: center;
         align-items: flex-start;
         padding-left: 0px;
     }
-    .nav_list{
+
+    .nav_list {
         width: 268px;
         height: 677px;
     }
+
     .nav_list-elements {
         width: 255px;
         height: 481px;
     }
-    .checkButton{
+
+    .checkButton {
         left: 230px;
     }
+
     .block-logo {
-    column-gap: 10px;
-    margin-left: 11px;
+        column-gap: 10px;
+        margin-left: 26px;
     }
-    .nav_menu{
+
+    .nav_menu {
         column-gap: 40px;
     }
+
     .video-container video {
         width: 310px;
         height: 300px;
@@ -489,13 +498,17 @@ background: #1f1f26;
         margin-top: 18px;
 
     }
+
     .video-container .close {
         position: absolute;
         left: 295px;
         top: 30px;
     }
-
-    .checkButton{
-        margin-left: 10px;
+    .menu-links {
+        padding: 0 10px;
     }
 
+    .checkButton {
+        margin-left: 42px;
+    }
+}
