--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -491,7 +491,7 @@ a {
     height: 390px;
   }
   .section-two-image-one {
-    margin-right: 10px;
+    margin-right: 0;
   }
   section.section-two {
 	margin-top: 0;
